# cpplab1

./: .gitignore
hello/: hello.cpp
invsqrt/: CMakeLists.txt  MathFunctions.h  invsqrt.cpp
invsqrt/MathFunctions/: MathFunctions.cpp
poly/: CMakeLists.txt  CMakePresets.json  constants.cpp  constants.h  poly2.cpp  poly2.h  polysolver.cpp  roots.txt
sum/: output.txt  sum.cpp  terms.txt
